# Tabst.app

./: .gitignore  AGENTS.md  Agents.md  Agents.zh.md  README.md  README.zh.md  biome.json  components.json  forge.config.cjs  index.html  package.json  pnpm-lock.yaml  tailwind.config.cjs  tsconfig.json  vite.config.ts  vitest.config.ts
.github/: perf-thresholds.json  pull_request_template.md
.github/workflows/: ci.yml  release-linux.yml  release-mac.yml  release.yml  website-pages.yml
docs/dev/: AUTO_UPDATE_IMPLEMENTATION.md  BAR_NUMBER_HIGHLIGHT_FIX.md  BOTTOM_BAR_ORDER.md  CHORD_INLINE_VS_TOP.md  EDITOR_FOCUS_PLAYER_SCROLL_LOCK.md  GROUNDING_REPORT.md  I18N_ADAPTATION_PLAN.md  INLINE_CHORD_DIAGRAMS.md  PRINT_PREVIEW_FONT_DEBUG.md  PRINT_WINDOW_FONT_LOADING_FIX.md  README.md  SCROLL_VISIBILITY_FIX.md  SECURITY_AUDIT.md  (+6 more)
scripts/: README.md  assert-performance-thresholds.mjs  check-bundle-thresholds.mjs  codemix.js  collect-tauri-performance-baseline.mjs  collect-week1-baseline.mjs  generate-alphatex-commands.js  generate-tauri-updater-manifests.mjs  import-vendor-alphatex.cjs  rehydrate-vendor-links.cjs  rename-vendor-alphatex.sh  run-long-session-stress.mjs  run-multi-baseline.mjs  sanitize-vendor-alphatex.cjs  vendor-alphatex.cjs  verify-tauri-config.mjs
src/: AGENTS.md  global.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  print.json
src-tauri/icons/: icon.icns
src-tauri/src/: fs_commands.rs  git_commands.rs  lib.rs  main.rs  models.rs  repo_commands.rs  settings_commands.rs  support.rs  updater_commands.rs
(+278 files in other folders)
